SparkLauncher untested