@@ -1,93 +1,120 @@
 package org.lakehouse.taskexecutor.executionmodule;
 
+
 import com.fasterxml.jackson.core.JsonProcessingException;
-import org.apache.spark.launcher.SparkAppHandle;
-import org.apache.spark.launcher.SparkLauncher;
 import org.lakehouse.client.api.utils.ObjectMapping;
+import org.lakehouse.client.rest.spark.SparkRestClientApi;
+import org.lakehouse.client.rest.spark.standalone.CreateRequest;
+import org.lakehouse.client.rest.spark.standalone.CreateResponse;
+import org.lakehouse.client.rest.spark.standalone.StatusResponse;
 import org.lakehouse.common.api.task.processor.entity.TaskProcessorConfigDTO;
 import org.lakehouse.common.api.task.processor.exception.TaskFailedException;
+import org.lakehouse.taskexecutor.configuration.SparkConfigurationProperties;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.OutputStream;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-public class SparkLauncherTaskProcessor extends AbstractDefaultTaskProcessor{
+public class SparkLauncherTaskProcessor extends AbstractSparkDeployTaskProcessor{
     private final Logger logger = LoggerFactory.getLogger(this.getClass());
-
-    public SparkLauncherTaskProcessor(TaskProcessorConfigDTO taskProcessorConfigDTO) {
-        super(taskProcessorConfigDTO);
+    public String JDK_JAVA_OPTIONS=
+            " --add-exports=java.base/sun.nio.ch=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.io=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.lang.invoke=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.lang.reflect=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.lang=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.net=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.nio=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.sql=ALL-UNNAMED" +
+                    " --add-opens=java.sql/java.sql=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.util.concurrent.atomic=ALLSparkConfigurationProperties-UNNAMED" +
+                    " --add-opens=java.base/java.util.concurrent=ALL-UNNAMED" +
+                    " --add-opens=java.base/java.util=ALL-UNNAMED" +
+                    " --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" +
+                    " --add-opens=java.base/sun.nio.ch=ALL-UNNAMED" +
+                    " --add-opens=java.base/sun.security.action=ALL-UNNAMED" +
+                    " --add-opens=java.base/sun.util.calendar=ALL-UNNAMED" +
+                    " --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED" +
+                    " --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED" +
+                    " -Djdk.reflect.useDirectMethodHandle=false" +
+                    " -XX:+IgnoreUnrecognizedVMOptions";
+    public SparkLauncherTaskProcessor(
+            TaskProcessorConfigDTO taskProcessorConfigDTO,
+            SparkConfigurationProperties sparkConfigurationProperties,
+            SparkRestClientApi sparkRestClientApi) {
+        super(taskProcessorConfigDTO,sparkConfigurationProperties, sparkRestClientApi);
     }
 
     @Override
     public void runTask() throws TaskFailedException {
 
-        org.apache.spark.launcher.SparkAppHandle handle = getSparkAppHandle();
-        while (handle.getAppId() == null
-                && !handle.getState().equals(SparkAppHandle.State.FAILED)
-           ) {
-            logger.info("Waiting for application to be submitted: status={}", handle.getState());
-            sleep1500ms();
-        }
-        if(handle.getState().equals(SparkAppHandle.State.FAILED))
-            throw new TaskFailedException("Submit failed");
-// todo Exception in thread "main" java.lang.NoClassDefFoundError: com/ctc/wstx/io/InputBootstrapper
-       // look maven tree deps
-        
-        logger.info("Submitted as {}", handle.getAppId());
+        CreateRequest createRequest = new CreateRequest();
 
-        while (!handle.getState().isFinal()) {
-                logger.info("{}: status={}", handle.getAppId(), handle.getState());
-                sleep1500ms();
-            }
-        logger.info("Finished as {}", handle.getState());
+        createRequest.setMainClass("org.lakehouse.taskexecutor.executionmodule.body.SparkProcessorBodyStarter");
+        createRequest.setAppResource("/home/dm/projects/my/lakehouse/lakehouse-task-spark-apps/target/lakehouse-task-spark-apps-0.3.0.jar");
+        logger.info("Use service spark properties");
+        Map<String, String> sparkConf = new HashMap<>(getSparkConfigurationProperties().getProperties());
+        logger.info("Set task name to spark property spark.app.name");
+        sparkConf.put("spark.app.name", getTaskProcessorConfig().getLockSource());
+        logger.info("Override service spark properties from task properties");
+        sparkConf.putAll(
+                getTaskProcessorConfig()
+                        .getExecutionModuleArgs()
+                        .entrySet()
+                        .stream()
+                        .filter(sse -> sse.getValue().startsWith("spark."))
+                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+        createRequest.setSparkProperties(sparkConf);
 
-    }
-    private void sleep1500ms()    throws TaskFailedException{
+        logger.info("Remove spark properties from task properties");
+        TaskProcessorConfigDTO unSparkedConfig = getTaskProcessorConfig();
+        unSparkedConfig.setExecutionModuleArgs(
+                unSparkedConfig.getExecutionModuleArgs()
+                        .entrySet()
+                        .stream()
+                        .filter(sse -> !sse.getValue().startsWith("spark."))
+                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+
+
         try{
-            Thread.sleep(1500L);
-        }catch (InterruptedException e){
-            throw new TaskFailedException("Sleep failed",e);
-        }
-    }
-    private String getAppArg() throws TaskFailedException {
-        try {
-            return ObjectMapping.asJsonString(getTaskProcessorConfig());
+            createRequest.setAppArgs(List.of(ObjectMapping.asJsonString(unSparkedConfig)));
         } catch (JsonProcessingException e) {
             throw new TaskFailedException(e);
         }
 
-    }
-    private SparkAppHandle getSparkAppHandle() throws TaskFailedException {
-        SparkLauncher launcher = new SparkLauncher()
-                .setVerbose(true)
-        //.addJar("hdfs:///user/user/jars/log4j-api-2.7.jar")
-        //.addJar("hdfs:///user/user/jars/log4j-core-2.7.jar")
-                .setAppResource("/opt/bitnami/spark/jars/lakehouse-task-spark-apps-0.3.0-jar-with-dependencies.jar")
-                .setMainClass("org.lakehouse.taskexecutor.executionmodule.body.SparkProcessorBodyStarter")
-                .setConf("spark.master", "spark://127.0.0.1:7077")
-                .addAppArgs(getAppArg())
-                .setDeployMode("cluster")
-                .addAppArgs(getAppArg())
-                .redirectError()
-               .redirectOutput(new File("spark-launcher.out"));
-        //todo missed in configuration
-        // .redirectError(new File("submit.err.log"))
-        // .redirectOutput(new File("submit.out.log"));
+        CreateResponse createResponse =
+                getSparkRestClientApi().createSubmission(createRequest);
 
-        getTaskProcessorConfig()
-                .getExecutionModuleArgs()
-                .entrySet()
-                .stream()
-                .filter(entry -> entry.getKey().startsWith("spark."))
-                .forEach(stringStringEntry ->
-                        launcher.setConf(stringStringEntry.getKey(),stringStringEntry.getValue()));
+        logger.info(
+                "Task {} submitted as {}",
+                getTaskProcessorConfig().getLockSource(),
+                createResponse.getSubmissionId());
 
-        try {
-            return launcher.startApplication();
-        } catch (IOException e) {
-            throw new TaskFailedException("Application start error", e);
+        StatusResponse status = null;
+        boolean isFinished = false;
+        while (!isFinished) {
+            sleep(1000L);
+            status =
+                    getSparkRestClientApi()
+                            .getStatus(createResponse.getSubmissionId());
+            logger.info("Spark job status {}", status.getDriverState());
+            if (isStatusFinal(status.getDriverState()))
+                isFinished = true;
         }
+        if (isStatusNegative(status.getDriverState()))
+            throw new TaskFailedException(String.format("Spark job state is %s", status.getDriverState()));
+    }
+    //todo other final status
+    List<String> finalStatusNames = List.of("FINISHED","KILLED", "FAILED");
+    List<String> negativeStatusNames = List.of("KILLED", "FAILED");
+
+    private boolean isStatusFinal(String statusName){
+        return finalStatusNames.contains(statusName);
+    }
+    private boolean isStatusNegative(String statusName){
+        return negativeStatusNames.contains(statusName);
     }
 }
